--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/about.jsx", "app/_layout.jsx", "app/index.jsx"  ]
 }
